Bugfix 4999 NEW UI: Unexpected white space at the bottom of Browser Window

--- a/Website/Composite/content/views/browser/browser.css
+++ b/Website/Composite/content/views/browser/browser.css
@@ -66,6 +66,10 @@ ui|toolbar#breadcrumbbar {
     padding: 0;
 }
 
+#browsertabbox ui|tabs{
+	display: none !important;
+}
+
 ui|path {
     width: 100%;
     float: left;
